css/main.css
html {
	font-size: 16px;
}

body {
	font-family: 'Montserrat', Helvetica, Arial, sans-serif;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-flow: row wrap;
	font-size: 1em;
}

.container{
	max-width: 1200px;
	margin: 0 auto;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-flow: row wrap;
}

h1,
h2,
h3 {
	color: black;
	text-transform: uppercase;
	font-weight: 700;
}
h1 {
	font-size: 1.875em;
}
h2 {
	font-size: 1.125em;
}
h3 {
	font-size: 0.75em;
}

p {
	font-size: 0.875em;
	line-height: 1.3125em;
    padding: 0 1.875em;
}

/*The widths are in a percentage!*/
header {
	width: 100%;
	margin: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-flow: row wrap;
}

header h1 {
	width: 50%;
	margin: 0;
	padding: 1em 2em 0.5em;
	border-bottom: 3px solid #77a466;
	display: flex;
	justify-content: center;
	align-items: center;
}
header h1 span {
	color: #77a466;
	margin-right: 0.5em;
}

header nav {
	width: 50%;
	margin: 0 1em;
	padding: 1em 0 1em;
}
header nav ul {
	padding: 0;
	margin: 0;
}
header nav ul li {
	text-transform: uppercase;
	font-weight: 700;
	font-size: 0.875em;
	padding: 1em 0.625em;
	display: flex;
	align-items: center;
	flex-flow: column wrap;
}
header nav ul li a{
	text-decoration: none;
	color:#77a466;
}

/*The widths are in a percentage!*/
.top-section,
.bottom-section {
	margin: 0 auto;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-flow: row wrap;
}

.main-image {
	display: flex;
	justify-content: center;
	align-items: center;
	padding: 0 1em;
}
.main-image img {
	width: 100%;
	border-bottom: 3px solid #77a466;
	border-top: 3px solid #77a466;
	margin: auto 1em;
}

.main-title {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-flow: row wrap;
	margin: auto 1em;
	padding: 0 1em;
}

.main-title h2 {
	text-align: left;
	padding: 0.3125em 0;
	color: #77a466;
}
.main-title p {
	padding: 0;
	font-size: 1em;
	line-height: 1.5625em;
}


.section-one,
.section-two,
.section-three {
	display: flex;
	justify-content: safe left;
	align-items: center;
	flex-flow: row wrap;
	width: 100%;
	border-top: 1px solid #eee;
	margin: auto 1em;
	padding-left: 1em;
}

.section-three {
	border-bottom: 1px solid #eee;
}


.section-one p,
.section-two p,
.section-three p {
	padding: 0;
}

.section-three h3 {
	width: 51%;
}

.menu {
	list-style: none;
	padding: 0;
}
.menu li {
	padding: 0.625em 0;
	color:#77a466;
}

.reviews {
	color: #333;
	font-size: 1em;
	line-height: 1.3125em;
}

.address {
	font-size: 1em;
	line-height: 1.5em;
}

/*The widths are in a percentage!*/
footer {
	width: 100%;
	height: 3.125em;
	margin: 0 auto;
	clear: both;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-flow: row wrap;
	
}
footer span {
	font-family: 'Galada', cursive;
	text-transform: lowercase;
	color: #77a466;
	font-size: 0.875em;
}


/*Tablet styles*/
@media all and (min-width:768px) {
	
	.bottom-section {
		width: 100%;
		margin: 1em;
		align-items: flex-start;
		border-top: 3px solid #eee;
		border-bottom: 3px solid #eee;
	}

	.section-one, .section-two, .section-three {
		width: 30%;
		margin: 0;
		border: none;
		padding: 0.5em;
	}

	.section-two {
		border-right: 3px solid #eee;
		border-left: 3px solid #eee;
		padding-left: 1em;
	}


}


/*Desktop styles*/
@media all and (min-width: 1200px) {
	header {
		flex-flow: row nowrap;
		}

	header nav ul {
		width: 100%;
		display: flex;
		justify-content: flex start;
		padding-right: 1em;
	}

	header h1 {
    	width: 100%;
    	padding: 0;
    	border-bottom: none;
    	text-align: left;
    	justify-content: flex-start;
    	padding-left: 1em;
  	}
}

